# Dirty-Master-Data-Management-Application

./: .gitignore  MANIFEST.in  README.md  dev_exec.sh  setup.cfg  setup.py
dmdma/: __init__.py  auth.py  config.py  db.py  views.py
dmdma/applications/iframes/: __init__.py  iframe.py
dmdma/applications/mapping_data_crud/: __init__.py  config.py  models.py
dmdma/applications/reporting/: __init__.py  item.py
dmdma/data/reporting/: testing_schema.sql
dmdma/reporting/: __init__.py  item.py
dmdma/static/: csv_table_downloader.js  dmdma_stylesheet.css
dmdma/templates/: home.html  master.html
dmdma/templates/auth/: login.html  master.html  register.html
dmdma/templates/iframes/: home.html  master.html
dmdma/templates/mapping_data_crud/: entities.html  group.html  group_create.html  group_delete.html  group_retrieve.html  group_update.html  home.html  mapping.html  mapping_create.html  mapping_delete.html  mapping_retrieve.html  mapping_update.html  master.html  reset_db.html
dmdma/templates/reporting/: home.html  master.html  pivot.html  reporting_items.html  reset_db.html
notes/: deploy_prod_linux.sh  github_notes.txt  piplist.txt  venv_setup_mac.sh  venv_setup_win.bat
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_iframes.py  test_mapping_data_crud.py  test_reporting.py
