[metadata]
name = dmdma
version = 0.2.0
url = https://github.com/d-roman-halliday/Dirty-Master-Data-Management-Application

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = dmdma
